# TinyWindow

./: .gitignore  CMakeLists.txt  Docs.zip.REMOVED.git-id  Example.cpp  LICENSE.md  README.md  TinyWindow.h  TinyWindowTest  makefile  premake5.lua  tinywindow.sharpmake.cs
Docs/: Doxyfile  TinyWindow.pdf.REMOVED.git-id  html.zip.REMOVED.git-id  searchdata.xml
Docs/html/: annotated.html  annotated.js  classes.html  dir_000000_000004.html  dir_000007_000011.html  dir_13bce0ed6884fafaac3fcd53ac9befee.html  dir_4f7a31fb3135e2bc158ce07678888a8a.html  dir_4f7a31fb3135e2bc158ce07678888a8a_dep.map  dir_4f7a31fb3135e2bc158ce07678888a8a_dep.md5  dir_5a86144b13d5860c774544b3c1980294.html  dir_5a86144b13d5860c774544b3c1980294_dep.map  dir_5a86144b13d5860c774544b3c1980294_dep.md5  dir_6654f9f2ac5a1b993949a716aba43000.html  dir_6654f9f2ac5a1b993949a716aba43000_dep.map  dir_6654f9f2ac5a1b993949a716aba43000_dep.md5  dir_785fc8210265e7ac6294d3e999acd997.html  dir_785fc8210265e7ac6294d3e999acd997_dep.map  dir_785fc8210265e7ac6294d3e999acd997_dep.md5  dir_856524284ebe840938865dc061f982fb.html  dir_8ac4abdf8d20348a7541521de00527a3.html  dir_91bb7743afdfc3eb01cbd22177ab25d2.html  dir_91bb7743afdfc3eb01cbd22177ab25d2_dep.map  dir_91bb7743afdfc3eb01cbd22177ab25d2_dep.md5  dir_921fb8b2aeeeaeadfa8a1cc4772b449c.html  dir_a15c5799b482a804883b255c8366098d.html  dir_beb7f40b8caac396ba0570a03b6029e3.html  dir_c2a5bfeee18c3ab93745e7fc1c85150a.html  dir_c38df53f1c6ef0f7b7435e5393912d5c.html  dir_d093273d007ca2cf23a006d98fd5f9a7.html  dir_d093273d007ca2cf23a006d98fd5f9a7_dep.map  dir_d093273d007ca2cf23a006d98fd5f9a7_dep.md5  dir_d522931ffa1371640980b621734a4381.html  dir_d522931ffa1371640980b621734a4381_dep.map  dir_d522931ffa1371640980b621734a4381_dep.md5  dir_e4f3d0e66de78b53e1f8873a21c9df14.html  dir_e4f3d0e66de78b53e1f8873a21c9df14_dep.map  dir_e4f3d0e66de78b53e1f8873a21c9df14_dep.md5  dir_e79f3b4e47ffee5897359014b1aa794b.html  dir_e79f3b4e47ffee5897359014b1aa794b_dep.map  dir_e79f3b4e47ffee5897359014b1aa794b_dep.md5  (+58 more)
Docs/html/d0/d2e/: _example_8cpp__incl.map  _example_8cpp__incl.md5
Docs/html/d0/d80/: struct_tiny_window_1_1window__t.html  struct_tiny_window_1_1window__t_a020161fb9ab8b207ece041f400994cf9.html  struct_tiny_window_1_1window__t_a07192b013fc716970bd01137f979fbb0.html  struct_tiny_window_1_1window__t_a08b36376fcfd8ecbab0c84cfd1f08b0b.html  struct_tiny_window_1_1window__t_a0a6c47870f6f35e7db0fc5b24cc1a221.html  struct_tiny_window_1_1window__t_a1d58d69dc3f7d7a21910d767ec033228.html  struct_tiny_window_1_1window__t_a1d827f56529a7e060fcfee1eb154d4e8.html  struct_tiny_window_1_1window__t_a2ea60c95b71bc7c05cc3074312156754.html  struct_tiny_window_1_1window__t_a33132a5c2bcd14eadf7f3cc32e9d4980.html  struct_tiny_window_1_1window__t_a365204b0316ee95ef4a805f16cb13ce2.html  struct_tiny_window_1_1window__t_a37bcf424a3ab33786f765fa5b522e64b.html  struct_tiny_window_1_1window__t_a4739362aab51de68e22bc043920ec4ba.html  struct_tiny_window_1_1window__t_a58c121c91e91e4166f23be521d1de21c.html  struct_tiny_window_1_1window__t_a61229454a7554fa6ea7c69bfb33e844f.html  struct_tiny_window_1_1window__t_a636c2ec331174fb44915193201404a48.html  struct_tiny_window_1_1window__t_a6436e7fb589773345eb04bec358041a6.html  struct_tiny_window_1_1window__t_a75aa73aa8f79f80d9c4db8f0d02ccc75.html  struct_tiny_window_1_1window__t_a77cb5581520f385c677e978c68b83131.html  struct_tiny_window_1_1window__t_a9d443fba0af5586385410d23726eeac2.html  struct_tiny_window_1_1window__t_aa08109e8a6cb0189be8b6c97cd9e1ccf.html  struct_tiny_window_1_1window__t_aaa4814adf833f65ac78589933e883bc3.html  struct_tiny_window_1_1window__t_abc98a482d5ca6b4d8e1009754ab8cd92.html  struct_tiny_window_1_1window__t_ac84b28e4fecc6e100256e82a5e7914d0.html  struct_tiny_window_1_1window__t_ad0251b745fd5cf5215f9b16a5fffccb7.html  struct_tiny_window_1_1window__t_adabcd829ed30efb8907251f295a30b38.html  struct_tiny_window_1_1window__t_ae2f235b4815f52b62604d03a6bff5c4f.html  struct_tiny_window_1_1window__t_ae526cf2e3065ebfb4825a633d62edabe.html  struct_tiny_window_1_1window__t_ae67e69e855ab556522f0cfd49df00da8.html  struct_tiny_window_1_1window__t_ae8c30834d4d3309fc2d83e5cc2262d52.html  struct_tiny_window_1_1window__t_aeb97f72dab7e616a6c4519e77e6905a1.html  struct_tiny_window_1_1window__t_aec504744fba71abc7b85b4e64746e83d.html  struct_tiny_window_1_1window__t_af175171aee9a207a9b46fbfedea54913.html  struct_tiny_window_1_1window__t_af4e0b42a96d55b6b0546cc6712656334.html  struct_tiny_window_1_1window__t_af65335bd9b86de58e92c0e9f3b1cecfd.html  struct_tiny_window_1_1window__t_af7a5aec8e4d1f02d90d02c649458957f.html
Docs/html/d1/d99/: _tiny_window_8h__dep__incl.map  _tiny_window_8h__dep__incl.md5
Docs/html/d2/d6a/: struct_tiny_window_1_1ui_vec2.html  (+9 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  (+53 more)
Docs/latex/: dir_e4f3d0e66de78b53e1f8873a21c9df14.tex
Example/: CMakeCache.txt  CMakeLists.txt  Example.cpp  Extra.cpp
Example/include/: IconTest.h
Include/: TenyWindow.hpp  TinyWindow.h
TinyWidnow/: TinyWidnow.sdf.REMOVED.git-id  TinyWidnow.sln
TinyWidnow/TinyWidnow/: Example.cpp  TinyWidnow.vcxproj  TinyWidnow.vcxproj.filters  TinyWindow.h
TinyWindow/: Example.cpp  TinyWindow.h  makefile
TinyWindow/TinyWindow/: TinyWindow.sdf.REMOVED.git-id  TinyWindow.sln
TinyWindow/TinyWindow/TinyWindow/: TinyWindow.vcxproj  TinyWindow.vcxproj.filters
Vulkan/: CMakeCache.txt  CMakeLists.txt  Vulkan.cpp  frag.glsl  vert.glsl
Vulkan/TinyWindow_Vulkan.dir/Debug/TinyWind.1B9A2D72.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  TinyWindow_Vulkan.lastbuildstate
source/: Example.cpp
(+546 files in other folders)
